updated again, personalised departments

--- a/contact.html
+++ b/contact.html
@@ -86,8 +86,8 @@
     </style>
   </head>
   <body>
-    <h1>Contact Us</h1>
-  
+    <h1><b>Interested In Working With Us?</b><b><br>Say Hi!</b></h1>
+
     <div class="contact-form">
       <form action="/submit_form" method="POST">
         <label for="name">Name:</label>
@@ -101,15 +101,15 @@
   
         <label for="department">Department:</label>
         <select id="department" name="department" required>
-          <option value="" selected disabled>Select a department</option>
-          <option value="sales">Sales</option>
-          <option value="support">Support</option>
-          <option value="billing">Billing</option>
-          <option value="technical">Technical</option>
-          <option value="general">General Inquiries</option>
+          <option value="" selected disabled>What Type Of Portfolio Do You Require?</option>
+          <option value="sales">Sales Portfolio</option>
+          <option value="support">Personal Portfolio</option>
+          <option value="billing">Blog Portfolio</option>
+          <option value="technical">Services Portfolio</option>
+          <option value="general">Other/General Inquiries</option>
         </select>
   
-        <label for="message">Message:</label>
+        <label for="message">Tell Us More:</label>
         <textarea id="message" name="message" rows="5" required></textarea>
   
         <button type="submit">Send Message</button>
